--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,27 @@
 body {
 	display: flex;
 	flex-flow: column;
-	height: -webkit-fill-available;
 	margin: 0;
 	background-color: #9F92B6;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1.6em;
+	font-size: 1.6rem;
 	color: #020202
+}
+
+@media screen and (max-width: 640px) {
+	body {
+		font-size: 1.0rem;
+	}
+}
+@media screen and (max-width: 860px) {
+	body {
+		font-size: 1.2rem;
+	}
+}
+@media screen and (max-width: 1280px) {
+	body {
+		font-size: 1.4rem;
+	}
 }
 
 /* Header */
@@ -17,7 +32,7 @@ body {
     padding: 0 16px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 500;
-	font-size: 1.2em;
+	font-size: 1.6rem;
 	color: #222;
 }
 
@@ -44,6 +59,7 @@ main {
 	flex-direction: column;
 	flex-grow: 1;
 	background-color: #EEE;
+	margin-bottom: 48px;
 }
 /* Online indicator */
 main #connexion_status {
@@ -69,7 +85,7 @@ main button {
 	color: inherit;
 	font: unset;
 	font-size: 0.8em;
-	position: absolute;
+	position: fixed;
 	bottom: 16px;
 	right: 16px;
 	/* Content is centered vertically */
