--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,26 @@ body {
 	background-color: #9F92B6;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.4rem;
-	color: #020202
+	color: #020202;
+	max-width: 60%;
+	margin: auto;
 }
 @media screen and (max-width: 1280px) {
 	body {
 		font-size: 1.2rem;
+		max-width: 75%;
 	}
 }
 @media screen and (max-width: 860px) {
 	body {
 		font-size: 1.0rem;
+		max-width: 90%;
 	}
 }
 @media screen and (max-width: 640px) {
 	body {
 		font-size: 0.8rem;
+		max-width: 100%;
 	}
 }
 
@@ -131,7 +136,7 @@ footer > * > i.material-icons {
 }
 .token-group {
 	margin: 12px 0;
-	padding: 0 6px;
+	padding: 0 3px;
 	background-color: whitesmoke;
 }
 .address {
@@ -139,6 +144,7 @@ footer > * > i.material-icons {
 }
 .token {
 	display: flex;
+	padding: 3px 6px;
 }
 .token > .name {
 	flex-grow: 1;
@@ -150,7 +156,7 @@ footer > * > i.material-icons {
 .token > .symbol, .token > .usd-balance {
 	margin: 0 0.25rem;
 	font-size: 0.8em;
+	line-height: 1.7em;
 	display: flex;
 	align-items: flex-end;
-	padding-bottom: 1px;
 }
