--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ main {
 }
 /* Online indicator */
 main #connexion_status {
-    display: flex;
+    	display: flex;
 	flex-direction: row-reverse;
 	align-items: center;
 	font-size: 0.8em;
@@ -77,6 +77,7 @@ main #connexion_status {
 
 main #connexion_status i.material-icons {
 	margin: 4px;
+	font-size: 1.4em;
 }
 main #connexion_status .label {
 }
