--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,26 @@ body {
 	margin: 0;
 	background-color: #9F92B64F;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1.4rem;
+	font-size: 22px;
 	color: #020202;
 	max-width: 60%;
 	margin: auto;
 }
 @media screen and (max-width: 1280px) {
 	body {
-		font-size: 1.2rem;
+		font-size: 18px;
 		max-width: 75%;
 	}
 }
 @media screen and (max-width: 860px) {
 	body {
-		font-size: 1.0rem;
+		font-size: 14px;
 		max-width: 90%;
 	}
 }
 @media screen and (max-width: 640px) {
 	body {
-		font-size: 0.8rem;
+		font-size: 12px;
 		max-width: 100%;
 	}
 }
@@ -137,7 +137,9 @@ footer > * > i.material-icons {
 	background-color: whitesmoke;
 }
 .address {
-	font-size: 0.85em;
+	font-size: 1.1em;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .token {
 	display: flex;
@@ -152,6 +154,6 @@ footer > * > i.material-icons {
 }
 .token > .symbol, .token > .usd-balance {
 	margin: 0 0.25rem;
-	font-size: 0.8em;
+	font-size: 0.75em;
 	align-items: flex-end;
 }
